--- a/index.html
+++ b/index.html
@@ -7,86 +7,94 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="head">
+    <div id="head"> 
         <div id="bbb">
-            <div>
+            <div id="vv">
                 <ul id="bar">
-                    <a href=""><li class="t h" >Tutorial</li></a>
-                    <a href=""><li class="e h">Exercise</li></a>
-                    <a href=""><li class="c h">Certificates</li></a>
-                    <a href=""><li class="s h">Services</li></a>
-                    <!-- <div>Menu</div> -->
-                    <div>
-                        <input type="text" placeholder="Search" class="inp">
-                    </div>
-                    <a href=""><li class="f h">For Teachers</li></a>
-                    <a href=""><li class="sp h">Spaces</li></a>
-                    <a href=""><li class="g h">Get Certified</li></a>
-                    <a href=""><li class="sign">Sign up</li></a>
-                    <a href=""><li class="Log">Log in</li></a>
-                   
-                    <!-- <div>
+                    <ul id="br">
+                        <a href=""><li class="t h" >Tutorial</li></a>
+                        <a href=""><li class="e h">Exercise</li></a>
+                        <a href=""><li class="c h">Certificates</li></a>
+                        <a href=""><li class="s h">Services</li></a>
+                        <!-- <div>Menu</div> -->
+                        <div id="sff">
+                            <input type="text" placeholder="Search" class="inp">
+                        </div>
+                        <a href=""><li class="f h">For Teachers</li></a>
+                        <a href=""><li class="sp h">Spaces</li></a>
+                        <a href=""><li class="g h">Get Certified</li></a>
+                    </ul>
+                    <ul id="sr">
+                        <a href=""><li class="sign">Sign up</li></a>
+                        <a href=""><li class="Log">Log in</li></a>     
+                        <!-- <div>
                         <p>&#128309</p>
-                    </div> -->
+                        </div> -->
+                    </ul>
                 </ul>
             </div>
-            <div>
-                <ul id="bar2">
-                    <a href="index.html " target=><li class="upbar">HTML</li></a>
-                     <a href="css.html"><li class="upbar">CSS</li></a>
-                     <a href=""><li class="upbar">JAVASCRIPT</li></a>
-                     <a href=""><li class="upbar">SQL</li></a>
-                     <a href=""><li class="upbar">PHYTON</li></a>
-                     <a href=""><li class="upbar">JAVA</li></a>
-                     <a href=""><li class="upbar">PHP</li></a>
-                     <a href=""><li class="upbar">HOW TO</li></a>
-                     <a href=""><li class="upbar">W3.CSS</li></a>
-                     <a href=""><li class="upbar">W3.CSS</li></a>
-                     <a href=""><li class="upbar">C++</li></a>
-                     <a href=""><li class="upbar">C#</li></a>
-                     <a href=""><li class="upbar">BOOTSTRAP</li></a>
-                     <a href=""><li class="upbar">REACT</li></a>
-                     <a href=""><li class="upbar">MYSQL</li></a>
-                     <a href=""><li class="upbar">JQUERY</li></a>
-                     <a href=""><li class="upbar">EXCEL</li></a>
-                     <a href=""><li class="upbar">XML</li></a>
-                 </ul>
+            <div class="dropdown">
+                <button class="dropbtn">others 
+                    <i class="fa fa-caret-down"></i>
+                  </button>
+                <div class="dropdown-content">
+                    <ul id="bar2">
+                        <a href="index.html " target=><li class="upbar">HTML</li></a>
+                        <a href="css.html"><li class="upbar">CSS</li></a>
+                        <a href=""><li class="upbar">JAVASCRIPT</li></a>
+                        <a href=""><li class="upbar">SQL</li></a>
+                        <a href=""><li class="upbar">PHYTON</li></a>
+                        <a href=""><li class="upbar ">JAVA</li></a>
+                        <a href=""><li class="upbar hw">PHP</li></a>
+                        <a href=""><li class="upbar hw">HOW TO</li></a>
+                        <a href=""><li class="upbar">W3.CSS</li></a>
+                        <a href=""><li class="upbar">C++</li></a>
+                        <a href=""><li class="upbar">C#</li></a>
+                        <a href=""><li class="upbar ff">BOOTSTRAP</li></a>
+                        <a href=""><li class="upbar ff">REACT</li></a>
+                        <a href=""><li class="upbar ff">MYSQL</li></a>
+                        <a href=""><li class="upbar ff">JQUERY</li></a>
+                        <a href=""><li class="upbar ff">EXCEL</li></a>
+                        <a href=""><li class="upbar ff">XML</li></a>
+                    </ul>
+                </div>
             </div>
-        </div> 
-        <table id="iframe">
-            <tr>
-                <th class="content">
-                    <h1>HTML TUTORIAL</h1>
-                    <a href="home.html" target="frame" class="ht">HTML HOME</a><br><br>
-                    <a href="intro.html" target="frame" class="ht">HTML Introduction</a><br><br>
-                    <a href="" target="" class="ht">HTML Editors</a><br><br>
-                    <a href="" target="" class="ht">HTML Basic</a><br><br>
-                    <a href="" target="" class="ht">HTML Element</a><br><br>
-                    <a href="" target="" class="ht">HTML Attributes</a><br><br>
-                    <a href="" target="" class="ht">HTML Heading</a><br><br>
-                    <a href="" target="" class="ht">HTML Paragraph</a><br><br>
-                    <a href="" target="" class="ht">HTML Style</a><br><br>
-                    <a href="" target="" class="ht">HTML Formatting</a><br><br>
-                    <a href="" target="" class="ht">HTML Quotation</a><br><br>
-                    <a href="" target="" class="ht">HTML Comments</a><br><br>
-                    <a href="" target="" class="ht">HTML Colors</a><br><br>
-                    <a href="" target="" class="ht">HTML CSS</a><br><br>
-                    <a href="" target="" class="ht">HTML Links</a><br><br>
-                    <a href="" target="" class="ht">HTML Images</a><br><br>
-                    <a href="" target="" class="ht">HTML Favicons</a><br><br>
-                    <a href="" target="" class="ht">HTML Page Title</a><br><br>
-                    <a href="" target="" class="ht">HTML Tables</a><br><br>
-                    <a href="" target="" class="ht">HTML List</a>
-                </th>
-                <th class="main">
-                    <iframe frameborder="0" name="frame"></iframe>
-                </th>
-                <th>
-                    <iframe frameborder="0" name="main" class="frs"></iframe>
-                </th>
-            </tr>
-        </table>
         </div>
+        <div>
+            <table id="iframe">
+                <tr>
+                    <th class="content">
+                        <h1>HTML TUTORIAL</h1>
+                        <a href="home.html" target="frame" class="ht">HTML HOME</a><br><br>
+                        <a href="intro.html" target="frame" class="ht">HTML Introduction</a><br><br>
+                        <a href="" target="" class="ht">HTML Editors</a><br><br>
+                        <a href="" target="" class="ht">HTML Basic</a><br><br>
+                        <a href="" target="" class="ht">HTML Element</a><br><br>
+                        <a href="" target="" class="ht">HTML Attributes</a><br><br>
+                        <a href="" target="" class="ht">HTML Heading</a><br><br>
+                        <a href="" target="" class="ht">HTML Paragraph</a><br><br>
+                        <a href="" target="" class="ht">HTML Style</a><br><br>
+                        <a href="" target="" class="ht">HTML Formatting</a><br><br>
+                        <a href="" target="" class="ht">HTML Quotation</a><br><br>
+                        <a href="" target="" class="ht">HTML Comments</a><br><br>
+                        <a href="" target="" class="ht">HTML Colors</a><br><br>
+                        <a href="" target="" class="ht">HTML CSS</a><br><br>
+                        <a href="" target="" class="ht">HTML Links</a><br><br>
+                        <a href="" target="" class="ht">HTML Images</a><br><br>
+                        <a href="" target="" class="ht">HTML Favicons</a><br><br>
+                        <a href="" target="" class="ht">HTML Page Title</a><br><br>
+                        <a href="" target="" class="ht">HTML Tables</a><br><br>
+                        <a href="" target="" class="ht">HTML List</a>
+                    </th>
+                    <th class="main">
+                        <iframe frameborder="0" name="frame"></iframe>
+                    </th>
+                    <th>
+                        <iframe frameborder="0" name="main" class="frs"></iframe>
+                    </th>
+                </tr>
+            </table>    
+        </div> 
     </div>
 </body>
 </html>
